media queries done pictures need to be resized and some horizontal scrollbar issues

--- a/css/index.css
+++ b/css/index.css
@@ -185,8 +185,9 @@ img {
 }
 @media ( max-width: 515px) {
   .container {
-    max-width: 500;
+    max-width: 515px;
     width: 100%;
+    padding: 0 2.5%;
   }
 }
 header {
@@ -216,7 +217,6 @@ header a {
 @media ( max-width: 515px) {
   header {
     display: flex;
-    flex-direction: column;
     align-items: center;
     width: 100%;
     padding: 2.5%;
@@ -226,9 +226,13 @@ header a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
   }
   header .navbar {
     width: 60%;
+  }
+  header h1 {
+    padding: 2.5% 0;
   }
 }
 .footer {
@@ -293,10 +297,24 @@ header a {
   margin-bottom: 30px;
 }
 @media ( max-width: 515px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+  .home .content-section .text-content .img-content {
+    width: 100%;
+  }
+}
+@media ( max-width: 515px) {
+  .home .content-section.inverse-content {
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+}
+@media ( max-width: 515px) {
   .home .content-pick {
     display: flex;
     flex-direction: column;
-    padding: 2.5%;
+    padding: 2.5% 5%;
   }
   .home .content-pick .destination {
     width: 100%;
