--- a/less/global.less
+++ b/less/global.less
@@ -42,10 +42,13 @@ img {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto; 
+}
 
-  @media @mobile {
-    max-width: 500;
+@media @mobile {
+  .container {
+    max-width: 515px;
     width: 100%;
+    padding: 0 2.5%;
   }
 }
