--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,7 +33,6 @@ header {
 @media @mobile {
     header {
     display: flex;
-    flex-direction: column;
     align-items: center;
     width: 100%;
     padding: 2.5%;
@@ -43,10 +42,15 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-direction: column;
     }
 
     .navbar {
         width: 60%;
+    }
+
+    h1 {
+        padding: 2.5% 0;
     }
 }
 }
